--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -31,6 +31,7 @@
 }
 
 .main {
+    margin-right: 30px;
     display: flex;
     width: 980px;
     height: 660px;
